--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,12 +3,8 @@ $dark-color: #6FADA8;
 $accent-color: #FF4545;
 $text-color: #707070;
 
-body {
-  margin: 0;
-  padding: 0;
-  color: $text-color;
-}
-
-* {
-  box-sizing: border-box;
+%container {
+  max-width: 100%;
+  width: 1200px;
+  margin: 0 auto;
 }
